Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* tighten up econf implementation; ctarget/cbuild are now forced as early
  arguments to configure to work around some misbehaviours in configure
  scripts (broken scripts, but so it goes).

* tighten up ebuild environments variable handling- had a bleed through
  of variable 'x' that was breaking mesa builds.

* yet another src_install fix for EAPI=4; this time ensuring the default
  function is available.

* we now run bashrcs (profile and user) every phase to match portage
  behaviour.  If folks desire it, a patch making that optional would be
  welcome.

* add support for /etc/portage/package.env and /etc/portage/env/.  Note
  that we only allow settings there to affect the bash environment- trying
  to adjust FEATURES from those files isn't on the intended support list.

* use ${LIBDIR_${ABI}} for ccache/distcc pathways; gentoo bug 355283.

* profile interpretation of make.defaults now has access to variables
  defined by it's parents, per PMS.


pkgcore 0.6.4: Jun 5th, 2011

* intercept and suppress exceptions from triggers unless the trigger
  explicitly disables it.

* work around libmagic python bindings sucking and not always being
  able to be used.

* fix 'default' support for src_install for EAPI=4.


pkgcore 0.6.3: May 30th, 2011

* support for /etc/portage/make.profile; Please Do Not Use it, while
  pkgcore is forced to support it, usage of it breaks most tools and is
  bluntly lock-in (no reason to move it- it's the same, been in the same
  place for a decade now).  Duly warned.

* misc env/bug fixes for EMERGE_FROM to ensure compatibility.

* deploy eselect support via pinspect portageq

* added man page for pinspect

* added pmaint env-update

* expose /usr/local/* through PATH for ebulids.


pkgcore 0.6.2: May 27th, 2011

* for EAPI<4, expose MERGE_TYPE info via EMERGE_FROM; do this for compatibility